13-qbittorrent/qbittorrent/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui
  namespace: media-server
spec:
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-webui
  namespace: media-server
spec:
  selector:
    app: sonarr
  ports:
  - name: webui
    port: 8989
    targetPort: 8989
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: jackett-webui
  namespace: media-server
spec:
  selector:
    app: jackett
  ports:
  - name: webui
    port: 9117
    targetPort: 9117
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-webapi
  namespace: media-server
spec:
  selector:
    app: flaresolverr
  ports:
  - name: webapi
    port: 8191
    targetPort: 8191
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: radarr-webui
  namespace: media-server
spec:
  selector:
    app: radarr
  ports:
  - name: webui
    port: 7878
    targetPort: 7878
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pinchflat-webui
  namespace: media-server
spec:
  selector:
    app: pinchflat
  ports:
  - name: webui
    port: 8945
    targetPort: 8945
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-webui
  namespace: media-server
spec:
  selector:
    app: bazarr
  ports:
  - name: webui
    port: 6767
    targetPort: 6767
    protocol: TCP
  type: ClusterIP
